# to-do-films

./: README.md  pyproject.toml
config/: settings.py  urls.py
filmes/: admin.py  models.py  serializers.py  views.py
filmes/migrations/: 0001_initial.py  0002_alter_filme_review.py  0003_rename_titulofilme_filme_titulo.py  0004_remove_filme_review_filmeassistido.py  0005_alter_filme_id_alter_filmeassistido_id.py  0006_alter_filme_id_alter_filmeassistido_id.py  0007_rename_titulo_filme_title_and_more.py  0008_rename_tittle_filmeassistido_title.py  0009_delete_filmeassistido.py  0010_filme_watched.py
